# sodoku_backend

./: .coverage  .env  .env.example  .pre-commit-config.yaml  AZURE_DEPLOYMENT_PLAN.md  CLAUDE.md  FASTAPI_AZURE_DEPLOYMENT_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt  startup.sh  test.py
.github/workflows/: master_sudokubackend.yml
alembic/: env.py
alembic/versions/: 46cefac3c883_initial_migration.py
app/: config.py  database.py  main.py
app/api/: auth.py  games.py
app/core/: security.py  sudoku.py
app/models/: game.py  user.py
app/schemas/: __init__.py  game.py  user.py
tests/: conftest.py
tests/test_api/: test_auth.py  test_games.py
tests/test_core/: test_security.py  test_sudoku.py
tests/test_models/: test_game.py  test_user.py
tests/test_schemas/: test_game_schemas.py  test_user_schemas.py
